sass(pg-custom): fix dark mode background

--- a/_sass/pg-custom.scss
+++ b/_sass/pg-custom.scss
@@ -1,6 +1,12 @@
 @import "variables";
 @import "mixins";
 
+@include prefers-dark {
+  html, body {
+    background-color: #181a1b;  // dark background
+  }
+}
+
 .post-tags {
     margin-top: 1.3rem;
 }
